[workspace]
members = [
	"client/cli",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/service",
	"pallets/parachain-system",
	"pallets/xcm-handler",
	"pallets/xtokens-messaging",
	"primitives/core",
	"primitives/parachain-inherent",
	"rococo-parachains/",
	"rococo-parachains/lockdrop",
	"rococo-parachains/modules/edge-treasury-reward",
	"rococo-parachains/pallets/parachain-info",
	"rococo-parachains/pallets/spambot",
	"rococo-parachains/primitives",
	"rococo-parachains/runtime",
	"test/runtime",
	"test/client",
	"test/service",
	"test/relay-sproof-builder",
]

[profile.release]
panic = "unwind"
