[package]
name = "xchain-messaging"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Add orml-xtokens for cross-chain messaging"
repository = "https://github.com/edgeware-builders/hedgeware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }
orml-traits = { version  = "0.4.0", default-features = false }
orml-utilities = { version  = "0.4.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
]
