[package]
name = "xtokens-messaging"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Add orml-xtokens for cross-chain messaging"
repository = "https://github.com/edgeware-builders/hedgeware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { version  = "3.0.0", default-features = false }
frame-system = { version  = "3.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false }
sp-runtime = { version  = "3.0.0", default-features = false }
orml-traits = { version  = "0.4.0", default-features = false }
orml-utilities = { version  = "0.4.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
]
