[package]
name = "lockdrop"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
hex = "0.3.2"
serde_json = "1.0"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = [ "derive" ] }
rococo-parachain-primitives = { path = "../primitives", default-features = false }

[features]
default = [ "std" ]
std = [
	"serde",
	"codec/std",
	"rococo-parachain-primitives/std",
]
