[package]
name = 'cumulus-test-parachain-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

parachain-info = { path = "../pallets/parachain-info", default-features = false }
rococo-parachain-primitives = { path = "../primitives", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-recovery = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

# Edgeware modules
edge-assets = { path = "../modules/edge-assets", default-features = false }
# edge-treasury-reward = { path = "../modules/edge-treasury-reward", default-features = false }

# EVM dependencies
# evm-runtime = { version = "0.20.0", default-features = false }
# pallet-evm = { path = "../frontier/frame/evm" }
# pallet-evm-precompile-simple = { path = "../frontier/frame/evm/precompile/simple" }
# pallet-ethereum = { path = "../frontier/frame/ethereum" }
# fp-rpc = { path = "../frontier/primitives/rpc" }

# Cumulus dependencies
cumulus-runtime = { path = "../../runtime", default-features = false }
cumulus-parachain-upgrade = { path = "../../parachain-upgrade", default-features = false }
cumulus-primitives = { path = "../../primitives", default-features = false }
cumulus-message-broker = { path = "../../message-broker", default-features = false }
xcm-handler = { path = "../../xcm-handler", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "master" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "master" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "master" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "master" }

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
#	"pallet-collective/std",
#	"pallet-contracts/std",
#	"pallet-contracts-primitives/std",
#	"pallet-contracts-rpc-runtime-api/std",
#	"pallet-democracy/std",
#	"pallet-elections-phragmen/std",
	"pallet-identity/std",
	"pallet-multisig/std",
#	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-recovery/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
#	"pallet-treasury/std",
	"pallet-scheduler/std",
	"pallet-sudo/std",
	"pallet-utility/std",
	"parachain-info/std",
	"rococo-parachain-primitives/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-message-broker/std",
	"cumulus-primitives/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm-handler/std",

	"edge-assets/std",
#	"edge-treasury-reward/std",
#	"fp-rpc/std",
#	"pallet-ethereum/std",
#	"evm-runtime/std",
#	"pallet-evm-precompile-simple/std",
]
